# pico-pedal

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
cmake/modules/: Findbcm2835.cmake
cmake/toolchains/: rpi-zero.cmake
docker/: Dockerfile
include/: adc.h  audio_pwm.h  button.h  display.h  led.h  pico_pedal.h  potentiometer.h  switch.h
pcb/: pico-pedal_2021-04-11.json  pico-pedal_2021-05-01.json
scripts/: build.sh
src/: adc.cpp  audio_pwm.cpp  button.cpp  display.cpp  led.cpp  main.cpp  pico_pedal.cpp  pico_pedal_main.cpp  potentiometer.cpp  switch.cpp
src/ssd1306/: GFX.cpp  SSD1306.cpp
